2006-08-10  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: support switch statements
	* vala/valaswitchsection.vala: add has_default_label () and
	  get_statements () methods
	* vala/valaswitchstatement.vala: add get_sections () method
	* ccode/valaccodedostatement.vala
	* ccode/Makefile.am: update
	* tests/test-020.vala: test switch statements
	* tests/Makefile.am: update

2006-08-10  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, vala/valacodegenerator.vala: use
	  Invokable
	* vala/valainvokable.vala
	* vala/valafield.vala, vala/valaformalparameter.vala,
	  vala/valamethod.vala, valasignal.vala,
	  vala/valavariabledeclarator.vala: implement Invokable
	* vala/Makefile.am: update

2006-08-10  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: support constants in namespaces and constants without
	  initializer
	* vala/valasemanticanalyzer.vala: depend on implemented interfaces
	* vala/valacodegenerator.vala: always include glib-object.h for
	  interfaces, append NULL to variable argument list calls
	* vala/valainterfacewriter.vala: support constants and ellipsis
	  parameters
	* vala/valaconstant.vala: make initializer optional
	* vala/valainterface.vala: implement get_lower_case_cprefix ()
	* vala/valanamespace.vala: support constants

2006-08-10  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l: accept real literals with trailing dot
	* vala/valasymbolresolver.vala: ignore non-type symbols
	* vala/valacodegenerator.vala: support float and double properties,
	  adapt to Field changes, support compound assignments in properties
	* vala/valainterfacewriter.vala: support ReferenceType attribute
	* vala/valaclass.vala: implement get_lower_case_cprefix ()
	* vala/valadatatype.vala: add get_lower_case_cprefix () method
	* vala/valafield.vala: let get_cname return full C name
	* vala/valamethod.vala: use DataType.get_lower_case_cprefix ()
	* vala/valastruct.vala: implement get_lower_case_cprefix (), add
	  set_is_reference_type () method
